--- a/src/theme/globalVariables.scss
+++ b/src/theme/globalVariables.scss
@@ -3,6 +3,10 @@ $darkThemePrimary: #000;
 
 $themeSecondary: #ffcfbc;
 
+$black: #101010;
+$light-black: #303030;
+$green: #ccf381;
+
 //#fedcce
 //#ffcfbc
 // So that TypeScript will recognise them. Need to configure Webpack to access this
