--- a/src/App.scss
+++ b/src/App.scss
@@ -27,15 +27,18 @@
 }
 
 .section {
-  background-color: red;
-  position: relative;
+  background-color: $black;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
   height: 100vh;
   .section-inner {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
     justify-content: center;
-    text-align: center;
+    // text-align: center;
     height: 100%;
   }
 }
