--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -8,23 +8,19 @@
   background-color: $darkThemePrimary;
 }
 
-.navContainer {
+.nav,
+.navExpanded {
   background-color: $black;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 1rem;
   position: sticky;
-  z-index: 10;
-}
-
-.nav,
-.navExpanded {
+  z-index: 1;
   height: 10vh;
 }
 
 .logoContainer {
-  z-index: 12;
+  z-index: 2;
   text-decoration: none;
   color: $green;
   font-size: 5vh;
@@ -50,7 +46,7 @@
 }
 
 .navLink {
-  color: #fff;
+  color: $white;
   text-decoration: none;
   padding: 0.2rem 1rem;
   height: 100%;
@@ -76,14 +72,25 @@
   position: absolute;
   top: 2.5vh;
   right: 4vh;
-  z-index: 300;
+  z-index: 2;
   @media screen and (min-width: 768px) {
     display: none;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .navContainer {
+  .nav {
+    background-color: $black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    z-index: 1;
+    height: 10vh;
+  }
+
+  .navExpanded {
     background-color: $black;
     display: flex;
     flex-direction: column;
@@ -91,14 +98,7 @@
     align-items: center;
     font-size: 1rem;
     position: sticky;
-    z-index: 10;
-  }
-
-  .nav {
-    height: 10vh;
-  }
-
-  .navExpanded {
+    z-index: 1;
     height: 100vh;
   }
 
@@ -113,7 +113,7 @@
     align-items: center;
     font-size: 3vh;
     position: sticky;
-    z-index: 10;
+    z-index: 1;
     text-decoration: none;
     height: 90vh;
   }
