--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -8,19 +8,15 @@
   background-color: $dark-theme-primary;
 }
 
-.nav,
-.nav-expanded {
-  background-color: $black;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.nav-container,
+.nav-container-expanded {
   position: sticky;
   z-index: 1;
   height: 10vh;
+  background-color: black;
 }
 
 .logo-container {
-  z-index: 2;
   text-decoration: none;
   color: $green;
   font-size: 5vh;
@@ -49,7 +45,6 @@
   color: $white;
   text-decoration: none;
   padding: 0.2rem 1rem;
-  height: 100%;
   cursor: pointer;
   outline: none;
   display: flex;
@@ -65,40 +60,16 @@
   }
 }
 
-.mobile-icon-container {
-  font-size: 5vh;
-  cursor: pointer;
-  color: $green;
-  position: absolute;
-  top: 2.5vh;
-  right: 4vh;
-  z-index: 2;
-  @media screen and (min-width: 768px) {
-    display: none;
-  }
-}
-
 @media screen and (max-width: 768px) {
-  .nav {
-    background-color: $black;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+  .nav-container {
     position: sticky;
     z-index: 1;
     height: 10vh;
   }
 
-  .nav-expanded {
-    background-color: $black;
+  .nav-container-expanded {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1rem;
-    position: sticky;
-    z-index: 1;
     height: 100vh;
   }
 
@@ -111,14 +82,21 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 3vh;
     position: sticky;
-    z-index: 1;
-    text-decoration: none;
-    height: 90vh;
+    height: 100%;
   }
 
   .nav-link-container {
     padding: 5vh;
+  }
+
+  .mobile-icon-container {
+    font-size: 5vh;
+    cursor: pointer;
+    color: $green;
+    position: absolute;
+    top: 2.5vh;
+    right: 4vh;
+    z-index: 2;
   }
 }
