--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -78,6 +78,7 @@
   }
 
   .nav-menu-expanded {
+    font-size: 2.5vmax;
     display: flex;
     flex-direction: column;
     justify-content: center;
