--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -9,17 +9,23 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    font-size: calc(1rem + 1vw);
+    font-size: calc(1rem + 2vmin);
+    width: 70%;
+
+    @media screen and (max-width: 810px) {
+      font-size: calc(0.7rem + 2vmin);
+      width: 100%;
+    }
 
     hr {
       border: 0;
       border-top: 1px solid $green;
-      margin-right: 1vw;
-      width: 50%;
+      margin-right: 3vw;
+      width: 60%;
     }
 
     .logo {
-      margin-right: 0.8vw;
+      margin-right: 2vw;
       text-decoration: none;
       color: $green;
       outline: none;
@@ -29,14 +35,22 @@
   .name-container {
     word-spacing: 1000vh;
     color: $white;
-    font-size: calc(1rem + 5vw);
+    font-size: calc(2rem + 7vmin);
     font-weight: bold;
-    padding-bottom: 3vw;
+    padding-bottom: 3vh;
+
+    @media screen and (max-width: 768px) {
+      font-size: calc(1rem + 5vmin);
+    }
   }
 
   .profile-container {
     color: $green;
-    font-size: calc(1rem + 2vw);
+    font-size: calc(1rem + 3vmin);
     font-style: italic;
+
+    @media screen and (max-width: 768px) {
+      font-size: calc(1rem + 2vmin);
+    }
   }
 }
