--- a/src/App.scss
+++ b/src/App.scss
@@ -11,30 +11,31 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-// .background {
-//   background-size: cover;
-//   min-height: 100vh;
-// }
+.background {
+  background-size: cover;
+  min-height: 100vh;
+}
 
-// .dark-primary {
-//   @extend .background;
-//   background-color: $dark-theme-primary;
-// }
+.dark-primary {
+  @extend .background;
+  background-color: $dark-theme-primary;
+}
 
-// .light-primary {
-//   @extend .background;
-//   background-color: $light-theme-primary;
-// }
+.light-primary {
+  @extend .background;
+  background-color: $light-theme-primary;
+}
 
 .section {
-  background-color: red;
   position: absolute;
   bottom: 0;
   height: 100vh;
+  width: 100vw;
   .section-inner {
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100%;
+    width: 100%;
   }
 }
