--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -13,7 +13,6 @@
   position: sticky;
   z-index: 1;
   height: 10vh;
-  background-color: black;
 }
 
 .logo-container {
@@ -30,11 +29,15 @@
 .nav-menu,
 .nav-menu-expanded {
   display: flex;
-  font-size: 3vh;
+  font-size: calc(1em + 1vh);
   text-decoration: none;
   position: absolute;
   top: 3vh;
   right: 4vh;
+
+  @media screen and (min-height: 1000px) {
+    font-size: calc(1em + 0.5vh);
+  }
 }
 
 .nav-link-container {
@@ -78,7 +81,7 @@
   }
 
   .nav-menu-expanded {
-    font-size: 2.5vmax;
+    font-size: 4vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
