--- a/src/App.scss
+++ b/src/App.scss
@@ -35,6 +35,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-content: center;
     height: 100%;
     width: 100%;
   }
