--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -18,10 +18,10 @@
 .logo-container {
   text-decoration: none;
   color: $green;
-  font-size: 5vh;
+  font-size: calc(1rem + 3vmin);
   cursor: pointer;
   position: absolute;
-  top: 2vh;
+  top: 2.5vh;
   left: 4vh;
   outline: none;
 }
@@ -32,7 +32,7 @@
   font-size: calc(1em + 1vh);
   text-decoration: none;
   position: absolute;
-  top: 3vh;
+  top: 2.7vh;
   right: 4vh;
 
   @media screen and (min-height: 1000px) {
@@ -95,11 +95,11 @@
   }
 
   .mobile-icon-container {
-    font-size: 5vh;
+    font-size: calc(1rem + 3vmin);
     cursor: pointer;
     color: $green;
     position: absolute;
-    top: 2.5vh;
+    top: 2.7vh;
     right: 4vh;
     z-index: 2;
   }
