--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -63,6 +63,10 @@
   }
 }
 
+.mobile-icon-container {
+  display: none;
+}
+
 @media screen and (max-width: 768px) {
   .nav-container {
     position: sticky;
@@ -96,6 +100,7 @@
   }
 
   .mobile-icon-container {
+    display: inherit;
     font-size: calc(1rem + 3vmin);
     cursor: pointer;
     color: $green;
