--- a/src/App.scss
+++ b/src/App.scss
@@ -4,48 +4,38 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-html {
-  height: 100%;
-}
-
-body {
-  min-height: 100%;
-}
-
-.background {
-  background-size: cover;
-  min-height: 100vh;
-}
-
-.dark-primary {
-  @extend .background;
-  background-color: $dark-theme-primary;
-}
-
-.light-primary {
-  @extend .background;
-  background-color: $light-theme-primary;
+  position: relative;
 }
 
 .section {
   position: absolute;
-  bottom: 0;
   height: 100vh;
-  width: 100vw;
+  top: 0vh;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+
+  &.light {
+    background-color: $light-theme-primary;
+  }
+
+  &.dark {
+    background-color: $dark-theme-primary;
+  }
   .section-inner {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    height: 100%;
-    width: 100%;
     padding: 6vw;
   }
 }
