--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,3 +1,5 @@
+@import "../../colours.scss";
+
 .modal {
   position: fixed;
   top: 0;
@@ -8,19 +10,21 @@
 }
 
 .modal-main {
+  border: 3px solid $green;
+  border-radius: 8px;
   position: fixed;
-  background: white;
-  width: 80%;
-  height: auto;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  padding: 1vh 2vw;
 }
 
-.display-block {
+.close-icon {
+  cursor: pointer;
   display: block;
-}
-
-.display-none {
-  display: none;
+  align-self: flex-end;
+  color: $green;
+  font-size: calc(1rem + 3vmin);
 }
