--- a/src/components/ListContainer/ListContainer.scss
+++ b/src/components/ListContainer/ListContainer.scss
@@ -2,12 +2,33 @@
 
 .container {
   color: $green;
+  margin-top: 20px;
 }
 
 .header {
   font-size: calc(1rem + 3vmin);
+  padding-bottom: 15px;
 
   @media screen and (max-width: 768px) {
     font-size: calc(1rem + 2vmin);
   }
+}
+
+.list-items-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+}
+
+.list-item-container {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-self: center;
+  padding-bottom: 15px;
+}
+
+.item-element {
+  align-self: center;
+  padding-top: 5px;
 }
